bootstrap/argocd-dns-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-dns
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/hostname: argocd.fedishark.eu
    external-dns.alpha.kubernetes.io/target: jump.fedishark.eu
spec:
  type: ClusterIP
  ports:
    - name: dummy
      port: 80
      targetPort: 80
