bootstrap/argocd-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`argocd.fedishark.eu`)
      kind: Rule
      middlewares:
        - name: no-compression
          namespace: traefik
      services:
        - name: argocd-server
          port: 80
    - match: Host(`argocd.fedishark.eu`) && Header(`Content-Type`, `application/grpc`)
      kind: Rule
      middlewares:
        - name: no-compression
          namespace: traefik
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    certResolver: letsencrypt
